# node

./: .gitignore  CMakeLists.txt  README.md
lib/: _stream_duplex.js  _stream_readable.js  buffer.js  child_process.js  events.js
lib/internal/bootstrap/: node.js
lib/internal/fs/: streams.js
lib/internal/process/: task_queues.js
playground/: dup.c  exec.c  fork.c  helper.c  popen.c  system.c  thread.c  unlink.c
playground/child_process/: fork.c  popen.c  system.c  zombie.c
playground/child_process/orphan/: child.sh  orphan.c  parent.sh
playground/js/: run.js
playground/shell/: run.sh
src/: node.h  process_wrap.cc  spawn_sync.cc
